@@ -1,6 +1,7 @@
 0.27_dev
 -refactor mouse positioning.
 -add mouse get_focused method.
+-revise surface methods for vector arg.
 
 0.27    2025-01-18
 -revise to permit import in python.
